# flask-vue-demo

./: .gitignore  README.md  app.py  pyproject.toml
client/: package-lock.json  package.json
client/src/components/: Books.vue  Ping.vue
server/: app.py
