[tool.poetry]
name = "flask-vue-demo"
version = "0.1.0"
description = ""
authors = ["Keda87 <adiyatmubarak@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.6"
quart = "^0.10.0"
quart-cors = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
